src/index.css
body{
  margin: 0;
  padding: 0;
}

/*veil section*/
.home-button {
  font-size: 3vh !important;
  border-radius: 3vh !important;
  background: black;
  color: white !important;
  outline: none;
  border: none;
  padding: 0.5em 2em;
  cursor: pointer;
  margin-top: 1em;
}

.home-button:hover {
  background: linear-gradient(135deg, #6e8efb, #a777e3);;
}

.home-title {
  color: #F4A261;
  font-size: 10vh;
  margin-bottom: 0;
}

.home-subtitle {
  color: #457b9d;
  font-size: 4vh;
}


/*carousel section*/
.carousel-title {
  height: 10vh;
  font-size: 7vh;
  color: #457b9d;
  text-align: center;
  padding-top: 2vh;
  margin-bottom: 20px;
}

.carousel {
  padding-bottom: 0;
  padding-top: 0;
  height: 80vh;
}

.carousel div {
  margin: auto;
}

.slick-prev {
  font-size: 5vh !important;
  left: 3% !important;
  z-index: 1;
}

.slick-next {
  font-size: 5vh !important;
  right: 3% !important;
  z-index: 1;
}

.slick-prev:before {
  font-size: 5vh !important;
  color: #aaaaaa !important;
}
.slick-next:before {
  font-size: 5vh !important;
  color: #aaaaaa !important;
}

/*Styling for card - in carousel*/
.panel {
  width: 80%;
  margin-top: 0 !important;
  height: 80vh;
  display: flex;
}

.panel-left {
  padding: 40px !important;
  background: #ECECEC;
  text-align: left;
  height: 100%;
  width: 45%;
}

.panel-right {
  height: 100%;
  width: 55%;
}

.card-chapter {
  color: #457b9d;
  font-size: 4vh;
}

.card-name {
  color: #F4A261;
  font-size: 5vh;
  margin-bottom: 20px;
}

.card-description {
  font-size: 3vh;
}

.card-button {
  margin-top: 1em;
  border-radius: 20px !important;
}

.card-image {
  width: 100%;
  height: 100%;
}

/*Menu section*/

/*logo*/
#projectLogo {
  width: 40px;
  height: 40px;
}

/*powered by segment*/
.poweredBy-title {
  margin-top: 30px;
  text-align: center;
}

#powered-by-section {
  display: flex;
  align-items: center;
  justify-content: center
}

.powered-by {
  margin-top: 30px;
  text-align: center;
}

.poweredBy-title {
  font-size: 7vh;
}

.poweredBy-card {
  text-align: center;
  margin: 2em;
}

.poweredBy-card-title {
  font-size: 5vh;
  margin: 10px;
}

.poweredBy-card-content {
  display: inline-block;
  width: 80%;
  font-size: 3vh;
  font-weight: 200;
  color: #636363;
}

.poweredBy-card-button {
  font-size: 3vh !important;
  border-radius: 3vh !important;
  margin: 20px;
  min-width: 5em;
  padding-top: 10px;
  padding-bottom: 10px;
  color: white;
  text-decoration: none;
  display: inline-block;
  width: 30%;
}

.poweredBy-card-button:hover {
  color: white;
}

/*AboutUs segment*/
.about-outer {
  width: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.about-outer p a {
  color: #e0d8e3;
  text-decoration: underline;
}

.about-outer p a:hover {
  padding: 2px;
  border-radius: 1px;
  background: black;
  color: white;
  text-decoration: none;
}

#about-us-section {
  background: rgba(0, 0, 0, 0.4);
  display: flex;
  align-items: center;
  justify-content: center
}

.about-title {
  font-size: 7vh;
  margin-bottom: 5px;
  color: white;
}

.about-content {
  font-size: 3vh;
  font-weight: 200;
  width: 50%;
  display: inline-block;
  color: white;
}

.about-link {
  color: white;
  text-decoration: none;
}

.about-name {
  font-size: 3vh;
  font-weight: 200;
  color: white;
  display: block;
}

.about-centerpiece {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/*snapping elements and scrollbar*/
.snap-container {
  overflow: scroll;
  height: 100vh;
  scroll-snap-type: mandatory;
  scroll-snap-points-y: repeat(100vh);
  scroll-snap-type: y mandatory;
}

body::-webkit-scrollbar {
  width: 0px;  /* Remove scrollbar space */
  background: transparent;  /* Optional: just make scrollbar invisible */
}

::-webkit-scrollbar-track
{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	border-radius: 10px;
	background-color: transparent;
}

::-webkit-scrollbar
{
	width: 8px;
	background-color: transparent;
}

::-webkit-scrollbar-thumb
{
	border-radius: 10px;
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	background-color: #d1d1e0;
}

.snap-child {
  min-height: 100vh;
  scroll-snap-align: center;
}

/*algoritms styling*/
.contact-button {
  font-weight: 800;
  font-size: 5vh;
  color: rgba(0, 0, 0, 0.5);
  background: white;
  border-radius: 50%;
  border: 3px solid rgba(0, 0, 0, 0.5);
  width: 15vh;
  height: 15vh;
  transition: all 200ms ease-in;
}

.contact-button:hover {
  background: rgba(0, 0, 0, 0.5);
  border: 3px solid white;
  color: white;
}

.contact-button-text {
  color: white;
  font-size: 1.2em;
}

.algo-panel-child {
  padding: 50px;
}

.algo-right-panel {
  position: sticky;
  height: 100vh;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.algo-left-panel {
  padding: 0px !important;
}

.algo-left-subtitle {
  font-size: 3vh;
  color: rgba(0, 0, 0, 0.5);
  padding-left: 50px;
}

.algo-left-title {
  font-size: 5vh;
  padding-left: 50px;
}

.algo-left-text {
  font-size: 2vh;
  color: black;
}

.algo-left-header {
  font-size: 3vh;
  margin-top: 30px;
  margin-bottom: 30px;
}

/*Menu button inside algo panel*/
.menu-button {
  border: none !important;
  background: none !important;
  padding: 0px !important;
}

/*Footer for left algo panel*/
.algo-footer {
  color: white;
  padding: 5vh;
  font-size: 2vh;
  text-align: center;
  background: #264653;
  width: 100%;
  transition: all 200ms ease-in;
  display: block;
  text-align: left;
}

.algo-footer:hover {
  background: #2a9d8f;
  color: white;
}

/* Sketch */
.positive {
  width: 2em;
  height: 2em;
  background: #457B9D;
  display: inline-block;
  border-radius: 10px;
}

.positive-chosen {
  width: 2em;
  height: 2em;
  background: #457B9D;
  display: inline-block;
  border-radius: 10px;
  border: 4px solid #e63946;
}

.negative {
  width: 2em;
  height: 2em;
  background: #F4A261;
  display: inline-block;
  border-radius: 10px;
}

.negative-chosen {
  width: 2em;
  height: 2em;
  background: #F4A261;
  display: inline-block;
  border-radius: 10px;
  border: 4px solid #e63946;
}

/* Neural network */
.start-stop-button {
  padding: 1.5em;
  border-radius: 50%;
  display: inline-block;
  color: white;
}

